# C---RISCV-ISA-SIMULATOR

./: .gitignore  CMakeLists.txt  Makefile  decoder.c  decoder.h  main.c
include/: decode.h  execute.h  instruction.h  memory.h  registers.h
src/: decode.c  execute.c  memory.c  register.c
